[package]
name = "tmp_cargo_project"
version = "0.0.0"
authors = ["snapiz <jonathan.lapiquonne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
juniper = "0.14.1"
futures = "0.1.29"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive_more = "0.15.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
chrono = { version = "0.4.6", features = ["serde"] }
lazy_static = "1.3.0"